# crypto-bot-v4

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_RU.md  REVIEW.md  alembic.ini  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 689db1b67b22_initial_schema.py
api/: server.py  server.py.v5.0.bak  tradingview_routes.py
config/: config_v4.4.1.yaml  registry.py
config/environments/: backtest.yaml  paper.yaml  production.yaml
core/database/: db_manager.py
core/events/: bus.py  event_store.py
core/exchange/: __init__.py  adapter.py
core/models/: __init__.py
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: API.md  ARCHITECTURE.md  BACKTEST.md  CONFIG.md  DEPLOYMENT.md  EXPERIMENTS.md  TROUBLESHOOTING.md  WEB_PANEL_SPEC.md
scripts/: migrate.py  run_api.py
services/analytics_service/: service.py
services/data_service/: service.py  websocket.py
services/data_validator/: validator.py
services/execution_engine/: engine.py  reconcile.py  retry.py
services/execution_engine/orders/: limit.py  market.py  stop.py
services/execution_engine/quality/: __init__.py  monitor.py
services/feature_service/: calculator.py
services/health_monitor/: monitor.py
services/learning_service/: service.py
services/portfolio_engine/: engine.py
services/regime_detector/: detector.py
services/risk_engine/: engine.py
services/strategy_engine/: engine.py
services/strategy_engine/plugins/: base.py  bounce.py  breakout.py  loader.py  sweep.py
services/tradingview_service/: __init__.py
services/tradingview_service/indicators/: registry.py
services/tradingview_service/social/: registry.py
tests/unit/: test_exchange.py  test_services.py  test_tradingview.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/charts/: EquityChart.tsx
web/src/components/layout/: Layout.tsx  Sidebar.tsx
web/src/components/ui/: MetricCard.tsx
web/src/hooks/: useWebSocket.ts
web/src/lib/: utils.ts
web/src/pages/: AnalyticsPage.tsx  ConfigPage.tsx  DashboardPage.tsx  LogsPage.tsx  MonitorPage.tsx  PositionsPage.tsx  RiskPage.tsx  SettingsPage.tsx  StrategiesPage.tsx  TradesPage.tsx  TradingViewPage.tsx
web/src/store/: appStore.ts
web/src/types/: api.ts
