[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-bot-v4"
version = "4.5.0"
description = "Multi-exchange algorithmic trading platform — 13 independent services, 100+ exchanges via CCXT, TradingView integration, social sentiment, offline Walk Forward learning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "akoffice933-maker" },
]
keywords = [
    "crypto", "trading", "bot", "algorithmic-trading", "binance",
    "futures", "ccxt", "tradingview", "backtesting", "walk-forward",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.24.0,<3.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "aiohttp>=3.8.0",
    "websockets>=11.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "slowapi>=0.1.9",
    "ccxt>=4.4.0",
    "redis>=4.5.0",
    "pyarrow>=12.0.0",
    "fastparquet>=2023.0",
    "prometheus-client>=0.17.0",
    "structlog>=23.0.0",
    "psutil>=5.9.0",
    "tenacity>=8.2.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "black>=24.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
    "coverage>=7.4.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "torch>=2.0.0",
]
tracing = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]
ui = [
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/akoffice933-maker/crypto-bot-v4"
Documentation = "https://github.com/akoffice933-maker/crypto-bot-v4/blob/main/README.md"
Repository = "https://github.com/akoffice933-maker/crypto-bot-v4"
Issues = "https://github.com/akoffice933-maker/crypto-bot-v4/issues"

[project.scripts]
crypto-bot = "main:main"
crypto-bot-api = "scripts.run_api:main"
crypto-bot-migrate = "scripts.migrate:run_alembic"

# ═══════════════════════════════════════════════════════════════
# Tool Configurations
# ═══════════════════════════════════════════════════════════════

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.pytest_cache
  | alembic/versions
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["core", "services", "config", "api", "tests"]
known_third_party = ["numpy", "pandas", "ccxt", "sqlalchemy", "fastapi", "structlog", "pydantic"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "alembic/versions",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "N818",  # exception name should end with Error
]
per-file-ignores = { "tests/**" = ["S101", "F841", "N806"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = [
    "alembic/",
    "tests/",
    "build/",
    "dist/",
    ".venv/",
    "__pycache__/",
]
[[tool.mypy.overrides]]
module = [
    "ccxt",
    "ccxt.async_support",
    "binance.*",
    "structlog",
    "prometheus_client.*",
    "slowapi.*",
    "pydantic",
    "redis",
    "tenacity",
    "psutil",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--strict-markers", "--disable-warnings"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["core", "services", "config"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/alembic/*",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
